# presentation_teaching_ML

./: .gitignore  README.md  data_load.py  nohup.out  ppt_graphs.ipynb  presentation.py  presentation2.py  pyproject.toml
.ipynb_checkpoints/: ppt_graphs-checkpoint.ipynb
Data/: CommViolPredUnnormalizedData.textClipping  com_viol_features.json
