[tool.poetry]
name = "presentation"
version = "0.1.0"
description = ""
authors = ["sat20 <sat20@ic.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
